Configuration of the application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=SpringBootKeycloack
+
+#Keycloak Config.
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/spring-boot-realm-dev
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9090/realms/spring-boot-realm-dev/protocol/openid-connect/certs
+
+logging.level.org.keycloak=DEBUG
+
+#Configuracion extra.
+spring.output.ansi.enabled=always
