Create role restriction on endpoints.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,9 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9090/real
 
 logging.level.org.keycloak=DEBUG
 
+#Variables.
+jwt.auth.converter.principle-attribute=preferred_username
+jwt.auth.converter.resource-id=spring-client-api-rest
+
 #Configuracion extra.
 spring.output.ansi.enabled=always
